static/css/style.css
body {
  /*background-color: #c5e1fb;*/
  background-image: url("rainbowbg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  /*overflow: hidden;*/
}

main{
  height: 100px;
  width: 100px;
}
img {
  height: 100px;
  margin: 20px;
}

button {
  background-color: white;
  border: 4px solid lightblue;
  border-radius: 2px;
}

img.logo {
  height: 100px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(431%, 389%) skew(-4deg, 1deg);
}

img.basket {
  height: 170px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(31%, 245%);

}

.nav {
  /*border: 5px solid hotpink;*/
}

.logoDiv {
  border-radius: 500px 500px 0 0;
  border: 5px solid #244DA9;
  border-bottom: none;
  display: flex;
  align-items: center;
  justify-content: center;
  background: rgba(125, 188, 247, 0.7);
  width: 700px;
}

.wrapper {
  border: 5px solid #244DA9;
  border-radius: 120px 120px 120px 120px;
  background: rgba(125, 188, 247, 0.7);
  /*background: #3597f2;*/
  width: 700px;
  text-align: center;
  /*margin-top: -10px;*/

}

div.wrapper{
  position: absolute;
  margin: 100px;
}

.viewer {
  /*border: 5px solid #65b0f4;*/
  border-radius: 0 0 114px 114px;

}

.prompt {
  display: flex;
  justify-content: center;
  margin-top: 10px;
}

.error{
  background:
   linear-gradient(
     rgba(255, 0, 0, 0.7),
     rgba(255, 0, 0, 0.7)
   )
}

.board {
  display: flex;
  align-items: center;
  justify-content: center;
}

.disabled {
  opacity: .5;
}

.chainUrl {
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
  /*background-color: #ffb2ff;*/
  /*border: 2px solid #ffb2ff;*/
  padding: 40px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.chainPic {
  border: 4px solid lime;
  border-radius: 10px;
  margin-left: 2px;
  margin-right: 2px;
}

.options {
  /*height: 50px;*/
  /*display: flex;
  align-items: center;
  justify-content: center;*/
  /*border: 2px solid blue;*/
  padding: 25px;
  margin-top: 10px;
  margin-bottom: 10px;
  position: relative;
  text-align: center;
}
.options > div {
  display: inline-block;
}
.promptPic {
  /*border: 4px outset transparent;*/
  border-radius: 10px;
  margin-left: 5px;
  margin-right: 5px;
}

.first {
  display: block;
  /*border: 5px solid red;*/
}

 .reward {
   /*border: 4px solid purple;*/
   flex-direction: column;
   display: inline-flex;
   float: right;
 }

 /*.again {
   display: flex;
   align-items: center;
   justify-content: center;
 }*/

 .round-button {
   display: block;
   width: 100px;
   height: 100px;
   border: 2px solid #c5e1fb;
   border-radius: 50%;
   color: #f5f5f5;
   text-align: center;
   text-decoration: none;
   background: #244da9;
   box-shadow: 0 0 3px grey;
   font-size: 20px;
   font-weight: bold;
   font-family: 'Nunito Sans', sans-serif;
}
.round-button:hover {
    background: #0d255a;
}
.basketDiv {
  /*height: 400px;*/
  display: inline-block;
  overflow: scroll;
  /*border: 4px solid red;*/
}
.level {
  width: 35px;
  height: 35px;
  border: 2px solid #c5e1fb;
  border-radius: 50%;
  color: #f5f5f5;
  text-align: center;
  text-decoration: none;
  background: #244da9;
  box-shadow: 0 0 3px grey;
  font-size: 20px;
  font-weight: bold;
  font-family: 'Nunito Sans', sans-serif;
}

.level:hover {
  background: #C5E1FB;
  color: #244DA9;
  border-color: #244DA9;
}

.sign {
  height: 300px;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(287%,101%);
  /*transform: translate(218%,121%);*/
}

.app {
  position: absolute;
  /*top: 15%;
  left: 22%;*/
  top: -65%;
  /*left: 182%;*/
  left: 190%;
  /*transform: translate(38%, 12%);*/
  /*not sure if needed*/
  width: 60%;
}


/*.signPost {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(249%, 100%);
}*/

.cloud {
  /*width: 30%;
  height: 30%;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(10%, 10%);*/
}

.againWords {
  font-family: 'Nunito Sans', sans-serif;
  font-size: 20px;
}

.settings {
text-align: center;
}

.basket2 {
  /*border: 4px solid pink;*/
  /*display: flex;*/
  /*justify-content: center;
  align-content: center;*/
  margin-top: 4%;
  overflow: scroll;
  width: 100%;
  text-align: center;
  /*position: absolute;*/
  top: 0;
  left: 0;
  transform: translate(0%,0%);
}

/*gear menu*/
.menu {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(1080%,-14%);
}

/*
.intro{
  width: 100px;
  height: 100px;
}*/
.modal {
  /*width: 20%;*/
  text-align: center;
}

.glyphicon {
  font-size: 20px;
}

.display-inline {
  display: inline-block;
}

div.hopscotch-bubble .hopscotch-bubble-content {
  margin-left: 0;
}

.mask {
  position: fixed;
  /*top: 0;
  bottom: 0;
  left: 0;
  right: 0;*/
  /*transition: background-color 350ms ease;*/
  /*background-color: rgba(0, 0, 0, 1);*/
}

.masked {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.65);
}

div.hopscotch-bubble .hopscotch-content,
div.hopscotch-bubble h3 {
  font-weight: 300;
  color: #2b2e30;
}

div.hopscotch-bubble .hopscotch-content {
  opacity: 0.6;
}

div.hopscotch-bubble {
  border: 2px solid #6699CC;
}

div.hopscotch-bubble .hopscotch-bubble-arrow-container.up .hopscotch-bubble-arrow-border {
  border-bottom: 17px solid #fff;
  /*opacity: 0.5;*/
  border-left: 20px solid transparent;
  border-right: 20px solid transparent;
}

div.hopscotch-bubble .hopscotch-bubble-arrow-container.up .hopscotch-bubble-arrow {
  top: -15px;
}

div.hopscotch-bubble .hopscotch-bubble-arrow-container.up {
  top: -18px;
}

div.hopscotch-bubble .hopscotch-nav-button.next:hover,
div.hopscotch-bubble .hopscotch-nav-button.next {
  background-image: none;
  background-color: #6699CC;
  font-weight: normal;
  text-shadow: none;
  color: #fff;
  border: none;
  border-radius: 0;
}

div.hopscotch-bubble .hopscotch-bubble-close {
  opacity: 0.25;
}

div.hopscotch-bubble .hopscotch-bubble-close:hover {
  opacity: 0.7;
}

div.hopscotch-bubble,
div.hopscotch-bubble * {
  box-sizing: content-box;
}


.takeOff{
  position: absolute;
  background-color: rgba(255,255,255,0.1);
}

.over{
  background-color: rgba(255, 255, 255, 0.5);
  display: inline-block;
}

.otra {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(75%,43%);
}

img.mole {
  height: 400px;
}

img.more {
  position: absolute;
  top: 54%;
  left: 24%;
  height: 60px;
  transform: rotate(-12deg);
}
.back {
  position:absolute;
  top: 0;
  left: 0;
  transform: translate(108%,0%);
}

/*.tutorialBtn {
  background: #5BAA38;
  background-image: -webkit-linear-gradient(top, #5BAA38, #89C633);
  background-image: -moz-linear-gradient(top, #5BAA38, #89C633);
  background-image: -ms-linear-gradient(top, #5BAA38, #89C633);
  background-image: -o-linear-gradient(top, #5BAA38, #89C633);
  background-image: linear-gradient(to bottom, #5BAA38, #89C633);
  -webkit-border-radius: 28;
  -moz-border-radius: 28;
  border-radius: 28px;
  font-family: Arial;
  color: #ffffff;
  font-size: 20px;
  padding: 10px 20px 10px 20px;
  text-decoration: none;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(960%,202%);
}

.tutorialBtn:hover {
  background: #9cdb37;
  color: #fff;
  text-decoration: none;
}*/
img.tutorialButton {
  height: 45%;
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(588%,354%);
}

.basket2 h1 {
  font-size: 36px;
  /*position: absolute;
  top: 0;
  left: 0;
  transform: translate(135%,57%);*/
}

.basket2 img {
  /*width: 15%;
  height: 15%;*/
  border-radius: 30%;
}

.sound {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(1079%,68%);
}
/*.mas {
  position: absolute;
  top: 0;
  left: 0;
  transform: translate(0%, 0%);
}*/

/*.options > div {
  z-index: 60000;
  position: relative;
}*/

.highLight{
  z-index: 60000;
  position: relative;
}

.z-one{
  position: relative;
  z-index: 1;
}

.z-two{
  position: relative;
  z-index: 2;
}

.z-min{
  position: relative;
  z-index: -2;
}

/*For horizontal iPad*/
@media screen and (max-width: 1024px) {
  .sign {
    transform: translate(218%,121%);
  }
  img.logo {
    transform: translate(332%, 445%) skew(-4deg, 1deg);
  }
  .app {
    left: 72%;
  }
  .menu {
    transform: translate(880%,-14%);
  }
  img.tutorialButton {
    height: 40%;
    transform: translate(538%,403%);
  }
  .sound {
    transform: translate(880%,68%);
  }
  .back {
    transform: translate(44%,0%);
  }
  .otra {
    transform: translate(53%,34%);
  }
  img.basket {
    transform: translate(0%, 280%);
  }
}

/*For iPhone5 */
@media screen and (max-width: 568px) {
  /*img {
    height: 30%;
  }*/
  .wrapper {
    width: 700%;
  }
  div.wrapper {
    margin: 0;
  }
  .sign {
    transform: translate(218%,121%);
  }
  img.logo {
    transform: translate(332%, 445%) skew(-4deg, 1deg);
  }
  .app {
    left: 72%;
  }
  .menu {
    transform: translate(837%,-14%);
    height: 57%;
  }
  img.tutorialButton {
    height: 40%;
    transform: translate(538%,403%);
  }
  .sound {
    transform: translate(839%,68%);
    height: 57%;
  }
  .back {
    transform: translate(44%,0%);
  }
  .otra {
    transform: translate(53%,34%);
  }
  img.basket {
    transform: translate(6%, 208%);
    height: 75%;
  }
}

